# dynamic-meta

./: .gitignore  README.md  dynamic-meta.cabal
src/: Cat.hs  Main.hs  Physics.hs  Refs.hs  World.hs
src/Church/: Cat.hs  Physics.hs  World.hs
src/Dynamic/: Cat.hs  Physics.hs  World.hs
src/Existential/: Cat.hs  Physics.hs  World.hs
src/GADT/: Cat.hs  Physics.hs  World.hs
src/Impredicative/: Physics.hs  World.hs
srcidr/: Cat.idr  Physics.idr  World.idr  dynamic.ipkg
